--- a/src/app/shared/components/card-player/card-player.component.html
+++ b/src/app/shared/components/card-player/card-player.component.html
@@ -2,7 +2,7 @@
 <!-- Diseño del mode (small)-->
 @if ( mode==='small') {
   <div class="card-player player-small">
-    <img [src]="track.cover" [alt]="track.name" class="cover">
+    <img appImgBroken [src]="track.cover" [alt]="track.name" class="cover">
     <div class="content-player">
         {{track.name}}
     </div>
@@ -24,7 +24,7 @@
 @if (mode==='big') {
   <div class="card-player player-big">
   
-    <img [src]="track.cover" alt="" class="cover">
+    <img appImgBroken [src]="track.cover" alt="" class="cover">
   
     <div class="content-player">
         <div class="title-track">{{track.name}}</div>
@@ -32,7 +32,7 @@
     </div>
     <div class="buttons-player">
       @if(true){
-        <button class="play-btn">
+        <button (click)="sendPlay(track)" class="play-btn">
             <i class="uil " [ngClass]="{'uil-play':true}"></i>
         </button>
       }
