--- a/src/app/shared/components/play-list-body/play-list-body.component.html
+++ b/src/app/shared/components/play-list-body/play-list-body.component.html
@@ -1,15 +1,15 @@
 <div class="play-list-body">
   <ul class="play-list-table-header">
-      <li>Nombre ❤</li>
-      <li>álbum 🆗</li>
+      <li (click)="changeSort('name')">Nombre ❤</li>
+      <li (click)="changeSort('album')">álbum 🆗</li>
       <li>fecha incorporación 🍌😁</li>
       <li><i class="uil uil-clock-eight"></i></li>
   </ul>
-  @for (item of tracks; track item._id) {
+  @for (item of tracks | orderList: optionSort.property : optionSort.order; track item._id) {
 
     <ul class="play-list-rows">
         <li class="track-name">
-            <ng-container *ngTemplateOutlet="coverSection;context:{item:item}"></ng-container>
+            <ng-container *ngTemplateOutlet="coverSection;context:{list:item}"></ng-container>
         </li>
         <li class="track-name-opacity">
             {{item.album}}
@@ -26,13 +26,13 @@
 </div>
 
 <!--template del cover-->
-<ng-template #coverSection let-item="item">
+<ng-template #coverSection let-list="list">
 
   <div class="cover-section">
-      <img appImgBroken class="cover-track" [src]="item?.cover" [alt]="item?.name">
+      <img appImgBroken class="cover-track" [src]="list.cover" [alt]="list.name">
       <div class="cover-info">
-          <div class="name-track">{{item?.name}}</div>
-          <div class="name-track-details">{{item?.artist?.name}}</div>
+          <div class="name-track">{{list.name}}</div>
+          <div class="name-track-details">{{list.artist.name}}</div>
       </div>
   </div>
 
