--- a/src/app/modules/tracks/pages/track-page/track-page.component.html
+++ b/src/app/modules/tracks/pages/track-page/track-page.component.html
@@ -1,8 +1,8 @@
 <div class="tracks-page">
   <!--section top (small)-->
-  <app-section-generic [dataTracks]="mockTrackList" [mode] = " 'small' " [title] = " '¡La mejor música del mundo!' ">
+  <app-section-generic [dataTracks]="trackTrending" [mode] = " 'small' " [title] = " '¡La mejor música del mundo!' ">
   </app-section-generic>
   <!--section medium (big)-->
-  <app-section-generic [dataTracks]="mockTrackList" [mode] = " 'big' " [title] = " '¡Lo mejor de electrónica!' ">
+  <app-section-generic [dataTracks]="tracksRandom" [mode] = " 'big' " [title] = " '¡Lo mejor de electrónica!' ">
   </app-section-generic>
 </div>
